# packager

./: .dockerignore  .gitignore  404.html  LICENSE  Makefile  README.md  README.rst  cli.py  commands.py  config.py  index.html  mkdocs.yml  packager.py  packman.py  packman_gui.py  pyproject.toml  watcher.py
.github/workflows/: lint-test.yml
cfg/: far.yml  kerbalos.yml
configs/em5/: bieberfelde-mod.yml
configs/ksp/: ferram-aerospace.yml  kerbal-os.yml  kerbal-weather-project.yml
definitions/em5/: wuppertal-mod.yml
definitions/ksp/: infernal-robotics.yml  kerbal-attachment-system.yml  kerbal-engineer-redux.yml  kerbal-weather-project.yml  tac-self-destruct.yml
docker/: docker-compose.test.yml  test.Dockerfile
docs/: index.md  manifest.json  package_definition.json
docs/schemas/: package_definition.json
models/: configuration.py  install_step.py  manifest.py  package_source.py
packman/: __init__.py  commands.py  config.py  manager.py  packman.py
packman/api/: http.py
packman/commands/: __init__.py  command.py  exports.py  installation.py  meta.py  util.py
packman/conditions/: __init__.py  either.py  exists.py
packman/models/: condition.py  configuration.py  install_step.py  manifest.py  package_definition.py  package_source.py
packman/sources/: __init__.py  github.py  link.py  spacedock.py  wuppertal.py
packman/steps/: __init__.py  copy_folder.py  hang_forever.py
packman/utils/: cache.py  files.py  operation.py  output.py  progress.py  uninterruptible.py  union.py
packman_cli/: cli.py
packman_gui/: gui.py
schemas/: config.json  manifest.json  package_definition.json
search/: search_index.json
sources/: github.py
steps/: copy_folder.py
test/: index.html
tests/: conftest.py  test_installation.py  test_manager.py  test_operation.py
utils/: cache.py  files.py  operation.py  remove.py
(+3 files in other folders)
