[tool.poetry]
authors = ["Ashleigh Udoh <mail@audoh.co.uk>"]
description = ""
license = "MIT"
name = "packman"
version = "0.1.0"

[tool.poetry.dependencies]
GitPython = "^3.1.11"
PyYAML = "^5.3.1"
appdirs = "^1.4.4"
colored = "^1.4.2"
loguru = "^0.5.3"
ordered-set = "^4.0.2"
patool = "^1.12"
pydantic = "^1.7.3"
python = "^3.9"
pywin32 = {version = "^300", platform = "win32"}
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
black = "^20.8b1"
flake8 = "^3.8.4"
mkdocs = "^1.1.2"
pytest = "^6.2.1"
rstcheck = "^3.3.1"
pytest-testdox = "^2.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
